--- a/BusinessService/BusinessService/appsettings.json
+++ b/BusinessService/BusinessService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-T70113U\\SQLEXPRESS; Database=BusinessApp; Trusted_Connection=true; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
